src/test/deca/codegen/invalid/division_zero_int_ob.deca
// Description:
//    division par 0
//
// Resultats:
//  erreur
//
// Historique:
//    cree le 23/01/2017

class A{
  int div(int x,int y){
    return x/y;
  }
}
{
A test = new A();
print(test.div(1,0));
}
